# orange-dework-wasm

./: Cargo.toml
docs/: oscore-wasm-dev-docs.md
examples/hello/: Cargo.toml
examples/hello/src/: lib.rs
orange/dework/: Cargo.toml
orange/dework/src/: lib.rs
orange/nft/: Cargo.toml
orange/nft/src/: lib.rs
oscore/: Cargo.toml
oscore/src/: lib.rs  runtime.rs
oscore/src/abi/: codec.rs  mod.rs  sink.rs  source.rs
